# defess-v3

./: README.md  package.json
.github/workflows/: nft-cron.yml
app/: globals.css  layout.tsx  page.tsx
app/(main)/: page.tsx
app/(main)/profile/: page.tsx
app/api/admin/nft-stats/: route.ts
app/api/auth/: route.ts
app/api/check-schema/: route.ts
app/api/jobs/process-period/: route.ts
app/api/posts/: route.ts
app/api/profile/: route.tsx
app/api/seed-follows/: route.ts
app/api/seed-nfts/: route.ts
app/api/seed-posts/: route.ts
app/api/seed-users/: route.ts
app/api/user/: route.ts
app/explore/: page.tsx
app/profile/[username]/: page.tsx
app/stellar contract/src/: lib.rs  test.rs
components/: compose-tweet.tsx  connect-button.tsx  connect-button2.tsx  freighter.ts  hos.tsx  layout.tsx  login.tsx  sidebar.tsx  solana-connect-button.tsx  tweet-feed.tsx  tweet.tsx  wallet-button.tsx
contexts/: WalletContext.tsx
database/: nft-winners-schema.sql  supabase-schema.sql
defess-nft-minting/: Anchor.toml.bak
defess-nft-minting/programs/defess-nft-minting/: Cargo.toml
defess-nft-minting/programs/defess-nft-minting/src/: constants.rs  error.rs  lib.rs  state.rs
defess-nft-minting/programs/defess-nft-minting/src/instructions/: initialize_collection.rs  mint_daily_winner_nft.rs  mint_winner_nft.rs  mod.rs  select_daily_winner.rs
defess-nft-minting/tests/: defess-nft-minting.ts
lib/: supabase.ts
lib/db/: mongodb.ts
lib/jobs/: period-processor.ts
lib/models/: Post.ts
lib/services/: winner-selection.ts
lib/solana/: client.ts
(+8 files in other folders)
